--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+html {
+    justify-content: center;
+    display: grid;
+}
+.container {
+    margin: 0 auto;
+    justify-content: center;
+    width: 1024px;
+    
+}
+header {
+    margin: top;
+    text-align: center;
+}
 body {
     text-align: center;
     background: url(img/BodyFon.jpg);
@@ -5,7 +19,8 @@ body {
     font-size: 1em;
     font-family: 'News Cycle', sans-serif;
     display: flex;
-	justify-content: center;
+    justify-content: center;
+    
 }
 li {
     text-align: left;
